SERVER-12980 Index spec equality check: don't consider 'background'